cross-namespace-endpoint.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: omtx-hub-backend-service
  namespace: omtx-hub
subsets:
- addresses:
  - ip: 10.28.0.15
  - ip: 10.28.2.15
  ports:
  - port: 8000
    protocol: TCP
